fix: home page navigation and floating elements spacing and position

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -25,7 +25,7 @@
 
 @media (max-width: 768px) {
   .App-logo {
-    top: 120vh;
+    top: 70vh;
     left: 50vw;
     height: 30vmin;
   }
