--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -32,3 +32,9 @@
 /* nav.navbar + * {
     mask-image: linear-gradient(to bottom, transparent var(--start), black var(--end));
 } */
+
+@media (max-width: 768px) {
+    .navbar ul li {
+        line-height: 1.5em;
+    }
+}
